fix: Add full bleed to homepage image

--- a/src/style.css
+++ b/src/style.css
@@ -64,5 +64,15 @@ html {
 }
 
 [data-tab-name][data-active-tab] {
-  display: revert;
+  display: grid;
+  grid-template-columns: 1fr min(65ch, 100%) 1fr;
+}
+
+[data-tab-name][data-active-tab] > * {
+  grid-column: 2;
+}
+
+[data-tab-name][data-active-tab] > .full-bleed {
+  grid-column: 1 / -1;
+  width: 100%;
 }
